--- a/pyVHR_env.yml
+++ b/pyVHR_env.yml
@@ -1,33 +1,27 @@
 name: pyvhr
 channels:
   - pytorch
-  - rapidsai
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
+  - python=3.10
+  - pip
+  - pytorch=1.11.0
+  - torchvision=0.12.0
+  - torchaudio=0.11.0
   - cudatoolkit=11.3
-  - cusignal=21.08.00
-  - hdf5=1.10.6
-  - pip=21.3.1
-  - pytables=3.6.1
-  - pytorch=1.10.0
-  - pytorch-mutex=1.0
-  - python=3.9.7
-  - torchaudio=0.10.0
-  - torchvision=0.11.1
+  - pytables
+  - hdf5
   - pip:
-    - asposestorage==1.0.2
-    - autorank==1.1.1
-    - biosppy==0.7.3
-    - ipython==7.28.0
-    - ipywidgets==7.6.5
-    - lmfit==1.0.3
-    - mediapipe==0.8.8.1
-    - plotly==5.3.1
-    - pybdf==0.2.5
-    - PySimpleGUI==4.53.0
-    - scikit_posthocs==0.6.7
-    - scikit-image==0.18.3
-    - tqdm==4.62.3
-    - tensorflow==2.5.0
+      - asposestorage==1.0.2
+      - autorank==1.1.1
+      - biosppy==0.7.3
+      - ipython==8.12.0
+      - ipywidgets==8.0.7
+      - lmfit==1.2.2
+      - mediapipe==0.10.5
+      - plotly==5.17.0
+      - scikit_posthocs==0.7.0
+      - scikit-image==0.19.3
+      - tqdm==4.66.1
+      - tensorflow==2.11.0
